Fix z-index

--- a/styles/pages/home/index.sass
+++ b/styles/pages/home/index.sass
@@ -427,6 +427,7 @@
     .project
       z-index: 1
       +small-desktop
+        position: relative
         flex-direction: row-reverse
         align-items: center
         justify-content: space-between
